pkg/cloud/azure/assets/validating-admission-service-annotation-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: azure-load-balancer-tcp-idle-timeout-validation-annotation-binding
spec:
  policyName: azure-load-balancer-tcp-idle-timeout-annotation-validation-policy
  validationActions: ["Deny"]
